--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,10 @@ repositories {
 
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "com.tngtech.archunit:archunit-junit5-api:1.1.0"
+    testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:1.1.0"
+    // https://mvnrepository.com/artifact/org.assertj/assertj-core
+    testImplementation 'org.assertj:assertj-core:3.25.1'
 }
 
 test {
